
=======
CHANGES
=======
0.5.0rc3
========
- orm
    - "not equals" comparisons of simple many-to-one relation
      to an instance will not drop into an EXISTS clause
      and will compare foreign key columns instead.
  
    - removed not-really-working use cases of comparing 
      a collection to an iterable.  Use contains() to test
      for collection membership.

- sql
    - Further simplified SELECT compilation and its relationship
      to result row processing.

    - Direct execution of a union() construct will properly set up
      result-row processing. [ticket:1194]

    - The internal notion of an "OID" or "ROWID" column has been
      removed.  It's basically not used by any dialect, and the
      possibility of its usage with psycopg2's cursor.lastrowid
      is basically gone now that INSERT..RETURNING is available.
  
    - Removed "default_order_by()" method on all FromClause
      objects.

0.5.0rc2
========
- orm
    - Fixed bug involving read/write relation()s that contain
      literal or other non-column expressions within their
      primaryjoin condition equated to a foreign key column.

    - "non-batch" mode in mapper(), a feature which allows mapper
      extension methods to be called as each instance is
      updated/inserted, now honors the insert order of the objects
      given.

    - Fixed RLock-related bug in mapper which could deadlock upon
      reentrant mapper compile() calls, something that occurs when
      using declarative constructs inside of ForeignKey objects.

    - ScopedSession.query_property now accepts a query_cls factory,
      overriding the session's configured query_cls.

    - Fixed shared state bug interfering with ScopedSession.mapper's
      ability to apply default __init__ implementations on object
      subclasses.

    - Fixed up slices on Query (i.e. query[x:y]) to work properly
      for zero length slices, slices with None on either end.
      [ticket:1177]
